--- a/style.css
+++ b/style.css
@@ -13,35 +13,35 @@ body{
     border-radius: 10px;
     border: 5px solid white;
     margin-top: 15%;
-    padding-top: 15px;
-    padding-bottom: 30px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-top: 25px;
+    padding-bottom: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
     background-color: whitesmoke;
 }
 .login-form input{
-    font-size: 1em;
+    font-size: 1.5em;
     padding-left: 5px;
     border: 2px solid gray;
     border-radius: 5px;
-    margin: 5px;
+    margin: 10px;
     opacity: 0.6;
 }
 .login-form button{
-    font-size: 1em;
+    font-size: 1.5em;
     font-weight: 700;
     background-color: steelblue;
     color: honeydew;
-    border-radius: 5px;
-    margin: 5px;
-    margin-top: 10px;
+    border-radius: 10px;
+    margin: 10px;
+    margin-top: 15px;
     padding-top: 5px;
     padding-bottom: 5px;
 }
 nav a{
     text-decoration: none;
-    padding-right: 10px;
-    font-size: 1em;
+    padding-right: 15px;
+    font-size: 1.5em;
     color: whitesmoke;
 }
 nav a:hover{
@@ -61,4 +61,5 @@ nav{
     text-align: center;
     margin-bottom: 10px;
     color: gray;
+    font-size: 40px;
 }
